--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,6 +34,7 @@ body {
 .page {
   padding: 15px;
   max-width: 1600px;
+  height: calc(100vh - 130px);
   width: 100%;
   margin: 0 auto;
   padding: 40px 20px;
