--- a/src/pages/textbookPage/textbookPage.css
+++ b/src/pages/textbookPage/textbookPage.css
@@ -28,7 +28,7 @@
 }
 
 .card-info {
- padding-left: 10px;
+  padding-left: 10px;
 }
 
 .card-title {
@@ -49,7 +49,47 @@
   right: 4%;
   width: 30px;
   height: 30px;
-  background-image: url(/src/assets/svg/audio.svg);
+  background-image: url('/src/assets/svg/audio.svg');
   background-position: center;
   background-size: cover;
 }
+
+.pagination,
+.groups-btn {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 20px 0;
+}
+
+.page-item, 
+.group-item {
+  padding: 8px 16px;
+  margin: 4px;
+  font-size: 18px;
+  cursor: pointer;
+  transition: all 0.3s;
+}
+
+.page-item {
+  border: 2px solid #fff;
+  border-radius: 5px;
+}
+
+.group-item {
+  text-transform: capitalize;
+}
+
+.page-item.active, 
+.group-item.active {
+  color: #ff0;
+  border-color: #ff0;
+}
+
+.group-item:hover {
+  color: #ff0;
+}
+
+.page-item:hover {
+  border-color: #ff0;
+}
+
