--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,8 +26,8 @@ ul {
 
 body {
   margin: 0;
-  color: #fff;
-  background: #4a4b4e;
+  color: #4a4b4e;
+  background: #fff;
   font-family: sans-serif;
 }
 
