--- a/src/components/login-form/login-form.css
+++ b/src/components/login-form/login-form.css
@@ -23,6 +23,7 @@
   top: 0;
   width: 100%;
   height: 100%;
+  background: rgb(76 74 74 / 60%);
 }
 
 .login-form,
@@ -32,6 +33,17 @@
   left: 50%;
   padding: 40px;
   transform: translate(-50%, -50%);
+  background: linear-gradient(90deg, #A395DA 16.15%, rgba(115, 127, 233, 0.97) 100%);
+  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
+  border-radius: 30px;
+}
+
+.login-form {
+  min-height: 270px;
+}
+
+.registration-form {
+  min-height: 350px;
 }
 
 .login-form__main {
@@ -44,7 +56,7 @@
   padding: 0;
   background: transparent;
   border: none;
-  color: rgb(122 122 255);
+  color: #FCAA23;
   cursor: pointer;
   font-size: 18px;
 }
@@ -74,4 +86,20 @@
 
 .user-profile {
   display: flex;
+}
+
+.user-profile__info {
+  display: flex;
+  flex-direction: column;
+  margin-right: 15px;
+}
+
+.user-profile__info p {
+  margin: 0;
+}
+
+.fail-data {
+  margin: 0;
+  text-align: center;
+  color: red;
 }
