--- a/src/pages/sprintPage/sprintPage.css
+++ b/src/pages/sprintPage/sprintPage.css
@@ -131,3 +131,63 @@
   width: 21px;
   height: 22px;
 }
+
+.result-answer{
+  position: absolute;
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  color: #010101;
+  background-color: #ffff;
+  width: 500px;
+  height: 500px;
+  transform:translate(-50%, -50%);
+  top: 47%;
+  left: 50%;
+  display: grid;
+  justify-items: center;
+  align-items: start;
+}
+
+
+.percent-answers{
+  display: grid;
+  background: linear-gradient(to right, green 0%, red 100%);
+  border-radius: 9px;
+  width: 200px;
+  height: 30px;
+  font-size: 24px;
+  justify-content: center;
+}
+
+.next-game {
+  display: grid;
+  justify-content: center;
+  grid-template-columns: auto auto;
+  align-items: center;
+  width: 150px;
+  height: 50px;
+  border-radius: 10px;
+  cursor: pointer;
+  border: 1px solid rgb(243, 186, 0);
+  font-family: 'Nunito';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+}
+
+.next-game:hover{
+  transition: 1s linear;
+  background-color: rgb(243, 186, 0);
+}
+
+.sprint-true-answer{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
+
+.sprint-false-answer{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+}
