--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -29,7 +29,7 @@ body {
   margin: 0;
   color: #4a4b4e;
   background: #fff;
-  font-family: sans-serif;
+  font-family: "Nunito", sans-serif;
 }
 
 .page {
