--- a/src/pages/audioCallPage/audioCallPage.css
+++ b/src/pages/audioCallPage/audioCallPage.css
@@ -7,6 +7,7 @@
   width: 100%;
   margin: 0 auto;
   border-radius: 65px;
+  box-shadow: 10px 10px 10px rgb(0 0 0 / 25%);
 }
 
 .answers{
@@ -36,11 +37,6 @@
 .animate-color{
   transition-duration: 1s;
   transition-property: background-color;
-}
-
-.animate-img{
-  transition-duration: 5s;
-  transition-property: background-img;
 }
 
 .svg-volume{
