--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -1,9 +1,12 @@
 .footer {
   display: flex;
   margin: 0 auto;
+  margin-top: 30px;
   width: 90%;
   height: 70px;
+  font-size: 24px;
   align-items: center;
+  color: #aaa;
   justify-content: space-between;
 }
 
@@ -13,14 +16,39 @@
   justify-content: space-between;
 }
 
-.footer-logo {
+.footer-logo__rss {
   display: block;
-  width: 80px;
-  height: 30px;
+  width: 90px;
+  height: 32px;
   background-size: contain;
   background-repeat: no-repeat;
   background-image: url("/src/assets/svg/rss.svg");
   transition: 0.3s;
+}
+
+.footer-row {
+  display: flex;
+  align-items: center;
+}
+
+.footer-logo-container {
+  margin-right: 30px;
+}
+
+.footer-logo {
+  width: 73px;
+  height: 73px;
+  background-image: url('/src/assets/png/footer-logo.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.footer-logo-title {
+  margin-left: -20px;
+  font-size: 24px;
+  font-weight: 700;
 }
 
 .copyright {
@@ -29,8 +57,69 @@
 
 .github-username {
   display: block;
-  color: #fff;
   text-decoration: none;
+  font-family: "Nunito", sans-serif;
   padding: 0 20px;
   transition: 0.3s;
+}
+
+@media (max-width: 1400px) {
+ 
+  .footer {
+    font-size: 20px;
+  }
+  
+  .footer-logo {
+    width: 70px;
+    height: 70px;
+  }
+
+  .footer-logo__rss {
+    width: 70px;
+    height: 24px;
+  }
+
+}
+
+@media (max-width: 1200px) {
+ 
+  .footer {
+    font-size: 16px;
+  }
+  
+  .footer-logo {
+    width: 70px;
+    height: 70px;
+  }
+
+  .footer-logo__rss {
+    width: 70px;
+    height: 24px;
+  }
+
+}
+
+@media (max-width: 1000px) {
+ 
+  .footer-logo {
+    width: 70px;
+    height: 70px;
+  }
+
+  .footer-logo__rss {
+    width: 70px;
+    height: 24px;
+  }
+
+}
+
+@media (max-width: 700px) {
+
+  .footer-github-username {
+    display: none;
+  }
+
+  .main-page-content {
+    max-width: 100%;
+  }
 }
