--- a/src/pages/textbookPage/textbookPage.css
+++ b/src/pages/textbookPage/textbookPage.css
@@ -1,3 +1,14 @@
+.page-header-buttons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.page-header {
+  display: flex;
+  justify-content: space-between;
+  margin: 10px 0;
+}
+
 .cards-container {
   display: flex;
   justify-content: space-between;
@@ -7,12 +18,16 @@
 }
 
 .message-box {
-  max-width: 400px;
+  max-width: 600px;
   margin: 0px auto;
   height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-family: "Nunito", sans-serif;
+  color:#aa96dd;
+  text-transform: uppercase;
+  font-size: 30px;
 }
 
 .card-item {
@@ -26,7 +41,7 @@
 }
 
 .hard {
-  background-color: rgb(235, 236, 173);
+  background-color: #fcaa23;
 } 
 
 .studied {
@@ -83,8 +98,7 @@
   display: block;
   color: #fff;
   font-family: "Nunito", sans-serif;
-  border-radius: 12px;
-  text-transform: capitalize;
+  border-radius: 5px;
   font-size: 16px;
   padding: 5px 10px;
   margin-left: 10px;
@@ -127,6 +141,7 @@
   background-color: #aa96dd;
 }
 
+.btn-game,
 .group-hard {
   font-family: "Nunito", sans-serif;
   background-color: #aa96dd;
@@ -134,6 +149,14 @@
   text-transform: uppercase;
 }
 
+.btn-game {
+  background-color: #fcaa23;
+}
+
+.btn-game {
+  min-width: 140px;
+  text-align: center;
+}
 .audio-control {
   width: 30px;
   height: 30px;
@@ -162,8 +185,10 @@
 
 .page-item, 
 .group-item,
-.group-hard {
+.group-hard,
+.btn-game {
   padding: 8px 16px;
+  border-radius: 5px;
   margin: 4px;
   font-size: 18px;
   cursor: pointer;
@@ -172,7 +197,6 @@
 
 .page-item {
   border: 2px solid #fff;
-  border-radius: 5px;
 }
 
 .group-item {
@@ -186,7 +210,8 @@
 }
 
 .group-item.active,
-.group-hard.active {
+.group-hard.active,
+.btn-game:hover {
   color: #4a4b4e;
 }
 
