--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,12 +36,14 @@ body {
 .page {
   width: 90%;
   margin: 0 auto;
-  padding: 40px 20px;
+  padding: 20px;
 }
 
 .title {
-  text-align: center;
-  margin-bottom: 30px;
+  text-align: left;
+  text-transform: uppercase;
+  font-size: 36px;
+  color: #aa96dd
 }
 
 .logo-link,
