--- a/src/pages/mainPage/mainPage.css
+++ b/src/pages/mainPage/mainPage.css
@@ -1,7 +1,7 @@
 .main-page {
   position: relative;
   max-width: 1170px !important;
-  height: 700px;
+  /* height: 700px; */
   margin: 0 auto;
   box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.25);
   border-radius: 65px;
