--- a/src/pages/statisticPage/statisticPage.css
+++ b/src/pages/statisticPage/statisticPage.css
@@ -155,4 +155,9 @@
 
 .graph {
   width: 45%;
+  box-shadow: 10px 10px 10px rgb(0 0 0 / 25%);
+}
+
+.graph canvas {
+  background-color: #F6F6F6;
 }
