--- a/src/pages/textbookPage/textbookPage.css
+++ b/src/pages/textbookPage/textbookPage.css
@@ -1,15 +1,3 @@
-.page-header-buttons {
-  display: flex;
-  justify-content: flex-end;
-}
-
-.page-header,
-.card-answers-container {
-  display: flex;
-  justify-content: space-between;
-  margin: 10px 0;
-}
-
 .cards-container {
   display: flex;
   justify-content: space-between;
@@ -19,16 +7,12 @@
 }
 
 .message-box {
-  max-width: 600px;
+  max-width: 400px;
   margin: 0px auto;
   height: 300px;
   display: flex;
   justify-content: center;
   align-items: center;
-  font-family: "Nunito", sans-serif;
-  color:#aa96dd;
-  text-transform: uppercase;
-  font-size: 30px;
 }
 
 .card-item {
@@ -42,10 +26,10 @@
 }
 
 .hard {
-  background-color: #fcaa23;
+  background-color: rgb(235, 236, 173);
 } 
 
-.studied {
+.easy {
   background-color: #aa96dd;
 }
 
@@ -80,21 +64,6 @@
   color: #000;
 }
 
-.card-answers-container {
-  display: flex;
-  justify-content: space-between;
-  width: 115px;
-  margin-right: 20px;
-}
-
-.card-answer {
-  text-align: center;
-  width: 40%;
-  border-radius: 5px;
-  background-color: #fcaa23;
-  color: #fff;
-}
-
 .card-text {
   font-size: 16px;
   color: #000;
@@ -113,19 +82,15 @@
   align-self: flex-end;
   display: block;
   color: #fff;
-  font-family: "Nunito", sans-serif;
-  border-radius: 5px;
+  border-radius: 12px;
+  text-transform: capitalize;
   font-size: 16px;
   padding: 5px 10px;
   margin-left: 10px;
   transition: all 0.3s;
-  cursor: pointer;
 }
 
-.card-btn:hover,
-.group-item:hover,
-.page-item:hover,
-.group-hard:hover {
+.card-btn:hover {
   box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.25);
 }
 
@@ -153,26 +118,12 @@
   background-color: rgb(199, 95, 81);
 }
 
-.btn-color7{
-  background-color: #aa96dd;
-}
-
-.btn-game,
 .group-hard {
-  font-family: "Nunito", sans-serif;
   background-color: #aa96dd;
   color: #fff;
   text-transform: uppercase;
 }
 
-.btn-game {
-  background-color: #fcaa23;
-}
-
-.btn-game {
-  min-width: 140px;
-  text-align: center;
-}
 .audio-control {
   width: 30px;
   height: 30px;
@@ -201,10 +152,8 @@
 
 .page-item, 
 .group-item,
-.group-hard,
-.btn-game {
+.group-hard {
   padding: 8px 16px;
-  border-radius: 5px;
   margin: 4px;
   font-size: 18px;
   cursor: pointer;
@@ -213,6 +162,7 @@
 
 .page-item {
   border: 2px solid #fff;
+  border-radius: 5px;
 }
 
 .group-item {
@@ -220,23 +170,18 @@
   color: #fff;
 }
 
-.page-item.active {
-  color: #aa96dd;
-  border-color:#aa96dd;
-}
-
-.group-item.active,
-.group-hard.active,
-.btn-game:hover {
-  color: #4a4b4e;
+.page-item.active, 
+.group-item.active {
+  color: #ff0;
+  border-color: #ff0;
 }
 
 .group-item:hover {
-  color:#aa96dd;
+  color: #ff0;
 }
 
 .page-item:hover {
-  border-color: #aa96dd;
+  border-color: #ff0;
 }
 
 @media (max-width: 1600px) {
