--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -36,14 +36,12 @@ body {
 .page {
   width: 90%;
   margin: 0 auto;
-  padding: 20px;
+  padding: 40px 20px;
 }
 
 .title {
-  text-align: left;
-  text-transform: uppercase;
-  font-size: 36px;
-  color: #aa96dd
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .logo-link,
