--- a/src/pages/mainPage/mainPage.css
+++ b/src/pages/mainPage/mainPage.css
@@ -55,6 +55,11 @@
   max-height: 90px;
   padding: 16px 90px;
   margin-top: 50px;
+  cursor: pointer;
+}
+
+.btn-registration:hover {
+    box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
 }
 
 @media (max-width: 1400px) {
