--- a/src/pages/teamPage/teamPage.css
+++ b/src/pages/teamPage/teamPage.css
@@ -1,6 +1,7 @@
 .about-team {
   display: flex;
   justify-content: space-between;
+  padding: 30px 0px;
 }
 
 .member__info {
@@ -88,9 +89,22 @@
   background-size: cover;
 }
 
+#member-0 {
+  background:url(../../assets/photos/siarhei.jpg) center no-repeat;
+  background-size: 260%;
+  background-position-y: 5%;
+  background-position-x: 40%;
+}
+
+#member-1 {
+  background:url(../../assets/photos/anna.jpg) center no-repeat;
+  background-size: cover;
+}
+
 #member-2 {
   background:url(../../assets/photos/vlad.jpg) center no-repeat;
-  background-size: cover;
+  background-size: 500%;
+  background-position-y: 37%;
 }
 
 .member__speciality-name {
