--- a/src/pages/audioCallPage/audioCallPage.css
+++ b/src/pages/audioCallPage/audioCallPage.css
@@ -32,6 +32,8 @@
 .answer-item:hover{
   background-color: rgb(243, 186, 0);
   transition: 0.7s linear;
+  box-shadow: 0px 4px 6px rgb(0 0 0 / 25%);
+  color:#ffffff;
 }
 
 .animate-color{
