--- a/src/pages/sprintPage/sprintPage.css
+++ b/src/pages/sprintPage/sprintPage.css
@@ -124,6 +124,8 @@
   border: 1px solid rgb(243, 186, 0);
 }
 .arrow-button:hover{
+  box-shadow: 0px 4px 6px rgb(0 0 0 / 25%);
+  color:#ffff;
   background-color: rgb(243, 186, 0);
   transition: 1s linear;
 }
@@ -205,6 +207,7 @@
 }
 
 .next-game:hover{
+  box-shadow: 0px 4px 6px rgb(0 0 0 / 25%);
   transition: 1s linear;
   background-color: rgb(243, 186, 0);
 }
