--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -115,11 +115,46 @@
 
 @media (max-width: 700px) {
 
+  .footer-logo {
+    width: 50px;
+    height: 50px;
+  }
+
+  .footer-github-username {
+    display: none;
+  }
+
+  .footer-logo-title {
+    margin-left: -14px;
+    font-size: 18px;
+  } 
+}
+
+@media (max-width: 500px) {
+  .footer-logo {
+    width: 40px;
+    height: 40px;
+  }
+
+  .footer {
+    font-size: 14px;
+  }
+
+  .footer-logo__rss {
+    width: 50px;
+    height: 20px;
+  }
+
   .footer-github-username {
     display: none;
   }
 
   .main-page-content {
     max-width: 100%;
+  }
+
+  .footer-logo-title {
+    margin-left: -12px;
+    font-size: 14px;
   }
 }
