--- a/src/pages/sprintPage/sprintPage.css
+++ b/src/pages/sprintPage/sprintPage.css
@@ -124,6 +124,8 @@
   border: 1px solid rgb(243, 186, 0);
 }
 .arrow-button:hover{
+  box-shadow: 0px 4px 6px rgb(0 0 0 / 25%);
+  color:#ffff;
   background-color: rgb(243, 186, 0);
   transition: 1s linear;
 }
@@ -205,6 +207,7 @@
 }
 
 .next-game:hover{
+  box-shadow: 0px 4px 6px rgb(0 0 0 / 25%);
   transition: 1s linear;
   background-color: rgb(243, 186, 0);
 }
@@ -273,4 +276,36 @@
   display: grid;
   justify-items: center;
   margin-top: 50px;
+}
+
+
+@media (max-width: 1024px) {
+  .window-open-answer {
+    max-width: 500px;
+  }
+
+  .wrap-answer {
+    max-width: 500px;
+  }
+
+  .sprint-page{
+    padding: 15px 0 15px 0;
+  }
+
+  .wrap-game {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+}
+
+@media (max-width: 500px) {
+  .window-open-answer {
+    max-width: 350px;
+    font-size: 24px;
+  }
+
+  .wrap-answer {
+    max-width: 350px;
+    font-size: 16px;
+  }
 }
