--- a/src/pages/statisticPage/statisticPage.css
+++ b/src/pages/statisticPage/statisticPage.css
@@ -17,11 +17,11 @@
 
 .statistic-block__subtitle {
   max-width: 180px;
+  margin: 15px;
   font-family: Nunito;
   font-size: 30px;
   color: #fff;
   text-transform: uppercase;
-  margin: 15px;
 }
 
 .inner-circle {
@@ -160,4 +160,48 @@
 
 .graph canvas {
   background-color: #F6F6F6;
+}
+
+@media (max-width: 1100px) {
+  .statistic-block {
+    flex-wrap: wrap;
+    justify-content: space-around;
+  }
+
+  .games, .statistic-block__main {
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 800px) {
+  .graph-container {
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .graph {
+    width: 90%;
+    margin-bottom: 40px;
+  }
+}
+
+@media (max-width: 500px) {
+  .title-statistic {
+    text-align: center;
+    font-size: 28px;
+  }
+
+  .statistic-block__subtitle {
+    margin: 5px;
+    font-size: 16px;
+  }
+
+  .games {
+    min-width: 300px
+  }
+
+  .game__title {
+    font-size: 26px;
+  }
 }
