--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -16,12 +16,13 @@
 }
 
 .nav.show {
-  display: block;
+  display: flex;
 }
 
 .nav {
   width: 100%;
   display: flex;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
 }
@@ -97,7 +98,6 @@
 
   .header {
     height: 100px;
-
   }
  
   .logo {
