--- a/src/pages/aboutAppPage/aboutAppPage.css
+++ b/src/pages/aboutAppPage/aboutAppPage.css
@@ -1,1 +1,117 @@
+.card-info-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
 
+.app-info {
+  margin: 40px 0;
+  font-size: 24px;
+  background: linear-gradient(180deg, #AA96DD 0%, rgba(115, 127, 233, 0.77) 100%);
+  color: #fff;
+}
+
+.card-info-item {
+  position: relative;
+  background-color: #F7F7F7;
+  max-width: 30%;
+  padding: 30px;
+}
+
+.app-info,
+.card-info-item {
+  padding: 30px;
+  border-radius: 30px;
+  box-shadow: 10px 10px 10px rgba(0, 0, 0, 0.25);
+}
+
+.card-info-title {
+  color: #aa96dd;
+  font-family: "Nunito", sans-serif;
+  font-size: 30px;
+  margin-bottom: 55px;
+  text-align: left;
+  text-transform: uppercase;
+}
+
+.card-info-content {
+  text-indent: 22px;
+  color: #aaaa;
+}
+
+.card-info-logo__book {
+  background: url('../../assets/svg/book.svg'), linear-gradient(180deg, #AA96DD 0%, rgba(115, 127, 233, 0.77) 100%);
+}
+
+.card-info-logo__graf {
+  background: url('../../assets/svg/graph.svg'), linear-gradient(180deg, #AA96DD 0%, rgba(115, 127, 233, 0.77) 100%);
+}
+
+.card-info-logo__game {
+  background: url('../../assets/svg/game.svg'), linear-gradient(180deg, #AA96DD 0%, rgba(115, 127, 233, 0.77) 100%);
+}
+
+.card-info-logo {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 105px;
+  width: 105px;
+  border-radius: 0% 31px 0% 31px;
+  background-position: center;
+  background-repeat: no-repeat;
+}
+
+@media (max-width: 1200px) {
+
+  .card-info-logo {
+    height: 90px;
+    width: 90px;
+  }
+
+  .app-info {
+    margin: 25px 0;
+    font-size: 20px;
+  }
+
+  .card-info-title {
+    font-size: 24px;
+    margin-bottom: 40px;
+  }
+
+}
+
+@media (max-width: 1000px) {
+
+  .card-info-title {
+    font-size: 20px;
+    margin-bottom: 30px;
+  }
+
+  .card-info-title {
+    font-size: 18px;
+    margin-bottom: 35px;
+  }
+  .card-info-content {
+    font-size: 14px;
+  }
+
+}
+
+@media (max-width: 800px) {
+
+  .card-info-container {
+    flex-direction: column;
+  }
+
+  .app-info {
+    font-size: 16px;
+  }
+
+  .card-info-item {
+    max-width: 100%;
+    margin-bottom: 30px;
+  }
+
+}
