--- a/src/pages/textbookPage/textbookPage.css
+++ b/src/pages/textbookPage/textbookPage.css
@@ -1,3 +1,7 @@
+.page-textbook {
+  max-width: 90% !important;
+}
+
 .page-header-buttons {
   display: flex;
   justify-content: flex-end;
@@ -290,7 +294,7 @@
   border-color: #aa96dd;
 }
 
-@media (max-width: 1600px) {
+@media (max-width: 1650px) {
   .card-item {
     width: 80%;
     margin: 0 auto;
