--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -34,9 +34,10 @@ body {
 }
 
 .page {
-  width: 90%;
+  max-width: 1400px;
   margin: 0 auto;
-  padding: 40px 20px;
+  padding: 20px;
+  margin-bottom: 20px;
 }
 
 .title {
