--- a/src/pages/games/game.css
+++ b/src/pages/games/game.css
@@ -163,8 +163,13 @@
   background-color: rgb(199, 95, 81);
 }
 
+.games-level input{
+  transition: 0.5s linear;
+}
 .games-level input:checked~label div {
   transform: scale(0.6);
+  transition: 0.5s linear;
+  border: 5px solid #aa96dd;
 }
 
 @media (max-width: 1500px) {
@@ -228,6 +233,9 @@
     padding: 5px;
     font-size: 26px;
   }
+  .button-start{
+    padding: 2px 10px;
+  }
 
   .buttons__block h2 {
     font-size: 16px;
@@ -235,6 +243,9 @@
 }
 
 @media (max-width: 500px) {
+  .page {
+    padding: 0;
+  }
 
   .buttons {
     padding: 100px 0px 0px 0px;
